--- a/practical1.html
+++ b/practical1.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Практична№1</title>
     <link rel="stylesheet" href="about-me.css">
-    <link rel="stylesheet" href="стиль2.css">
+    <link rel="stylesheet" href="practical1.css">
 </head>
 <body>
 <section>
