--- a/about-me.html
+++ b/about-me.html
@@ -20,7 +20,7 @@
     </header>
     <section class="informationPage">
         <h2>Про мене</h2>
-        <p>Привіт мене звати Дарина. Навчаюсь в ДУІКТ. Люблю читати книги, в більшості детективи.</p>
+        <p>Привіт мене звати Дарина. Навчаюсь в ДУІКТ. Люблю читати книги.</p>
     </section>
     <footer>
         <p>Контактні дані студента: Бондаренко Дарина, +38097533XXXX, dbondv2601@gmail.com</p>
